--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-<!--    
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    
+    <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/underscore/underscore.js"></script>-->
     <script src="systemjs.config.js"></script>
     <script>
