--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    
-    <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/underscore/underscore.js"></script>-->
+    -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/underscore/underscore.js"></script>
     <script src="systemjs.config.js"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
@@ -37,8 +37,8 @@
 
 
   <script>
-    $(document).ready(function (argument) {
-      console.log( argument + "Rizwan Zaheer");
+    $(document).ready(function (e) {
+      console.log( e + " <br/>Rizwan Zaheer");
     });
     
   </script>
