--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <script>
     $(document).ready(function (e) {
-      console.log( e + " <br/>Rizwan Zaheer");
+      console.log("Rizwan Zaheer");
     });
     
   </script>
