Adventures in Rx Observeable page 10

--- a/app/app.template.html
+++ b/app/app.template.html
@@ -1,8 +1,10 @@
 <h1>WelCome to Angular 2 Application! </h1>
 <br>
 <br>
-
-    <input type="text" id="search" class="form-control" placeholder="Search">
+<form	[ngFormModel]="form">
+				<input	type="text"	ngControl="search">
+</form>	
+    <!--<input type="text" id="search" class="form-control" placeholder="Search">-->
 
 <br>
 <br>
