--- a/app/app.template.html
+++ b/app/app.template.html
@@ -1,3 +1,7 @@
+
+<div *ngIf="isLoading" >
+    <i class="fa fa-spinner fa-spin fa-3x"></i>
+</div>
 <h1>WelCome to Angular 2 Application! </h1>
 <br>
 <br>
@@ -8,6 +12,7 @@
 
 <br>
 <br>
+
 <h1>Change Password Form</h1>
 <change-password>
 
