exercise part one

--- a/app/app.template.html
+++ b/app/app.template.html
@@ -1,8 +1,10 @@
-
+<h1>WelCome to Angular 2 Application! </h1>
 <div *ngIf="isLoading" >
     <i class="fa fa-spinner fa-spin fa-3x"></i>
 </div>
-<h1>WelCome to Angular 2 Application! </h1>
+<github-profile class="avatar">
+
+</github-profile>
 <br>
 <br>
 <form	[ngFormModel]="form">
