--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
-    <!--<script src="node_modules/@angular/bundles/http.dev.js"></script>-->
+    <script src="node_modules/@angular/bundles/http.dev.js"></script>
 
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
